--- a/workflow/dispatch/tsconfig.base.json
+++ b/workflow/dispatch/tsconfig.base.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
     "declaration": false,
     "declarationMap": false,
     "esModuleInterop": true,
